Capture email and first name
This is only a small part of a feature. It has some validations, and it
needs our first migration. It has our first form and error styles.

It can create a record, but it doesn't do anything useful, as there's
nowhere to redirect to.

It:

- Uses the form_field_errors approach from BFAWU, which is to say it
  adds a method to ApplicationHelper that generates foundation classes
  that show up with Foundation's default error styles
- Uses en.yml for labels and placeholder homes
- Has our one and only feature which isn't really a feature yet, it's
  only looking to see what's in the DB at the end rather than checking
  the behaviour of the system.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,11 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  helpers:
+    label:
+      membership_application:
+        email: "Email address"
+    placeholder:
+      membership_application:
+        email: "natalie@example.com"
+        first_name: 'Natalie'
