--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,7 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
+  main_title: "Join Fórsa"
   helpers:
     label:
       membership_application:
