Add work-and-pay step
It's incomplete in various senses:

1. We should be looking up employers for conditional rate calculations.
   Right now am capturing what I imagine *could* be used to process an
   application manually. And it's not complete because we aren't asking
   about CS/education, EO/CO etc
2. Pay unit isn't styled
3. No help-text for fields (tackling separately in one run at the end)
4. No styling for "What are you paid?" or validation that it's a .00
   value

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,11 @@ en:
     label:
       membership_application:
         email: "Email address"
+        job_title: 'Your job title'
+        employer: 'Your employer'
+        work_address: 'Your work place'
+        payroll_number: 'Your payroll number'
+        pay_rate: 'What are you paid?'
     placeholder:
       membership_application:
         email: "natalie@example.com"
