Add a help_for(field) helper
This renders the little bit of grey text along with a link for a
dropdown if necessary. All content comes from en.yml. Add a help_text
key for just text, and add a help_dropdown key with two subkeys `link`
and `content` for optional dropdown support.

The helper is just sugar for rendering shared/help_for_field, which is
a lot easier to maintain than trying to use content_tag in helpers.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,5 +47,18 @@ en:
         payroll_number: 'E.g. 12457843'
     help_text:
       membership_application:
+        email: 'A personal email is better'
         pay_rate: 'If the amount varies, use an average.'
-        payroll_number: 'Found on your payslip (why do we need this?)'
+        payroll_number: 'Found on your payslip'
+    help_dropdown:
+      membership_application:
+        email:
+          link: '(why?)'
+          content:
+            We want to be able to communicate with you effectively, inside and outside of your workplace.
+            Some employers use filters to block union emails, or you might change jobs in the future,
+            so you may not receive our emails if you use your work email.
+        payroll_number:
+          link: '(why do we need this?)'
+          content:
+            We need to arrange with your employer to deduct your membership payment from source.
