Display a monthly estimate for your pay
Doesn't yet:

- Show a spinner
- Hold off on asking the API until it has all the details required
- Have any testing!

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,9 @@ en:
         payroll_number: 'Found on your payslip'
         declaration: 'This must be "%{full_name}"'
         hours_per_week: 'Take the average over the last month.'
+        monthly_estimate:
+          This is 0.8% of your pay. Your employer will automatically deduct this and
+          pay it directly to Fórsa.
     help_dropdown:
       membership_application:
         email:
