--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,7 +37,7 @@ en:
         email: "Email address"
         job_title: 'Your job title'
         employer: 'Your employer'
-        work_address: 'Your work place'
+        work_address: 'Your workplace address'
         payroll_number: 'Your payroll number'
         pay_rate: 'What are you paid?'
         declaration: 'Sign your application by typing your name'
