Payroll number help text update
As per Marvel

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,7 +83,7 @@ en:
         payroll_number:
           link: '(why do we need this?)'
           content:
-            This helps us with the administration of deducting your union subscription fee each month.
+            This helps us with the administration of your union subscription fee.
         home_address:
           link: 'Why do we need this?'
           content:
