Fix broken school roll number validation
Wasn't accepting anything when given and wasn't in the spec coverage.
Also make the error message nicer.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,8 @@ en:
           attributes:
             gender:
               inclusion: 'please select a value from the list'
+            school_roll_number:
+              invalid: 'should be five digits followed by a letter'
   helpers:
     label:
       membership_application:
