--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
       membership_application:
         email: "Email address"
         job_title: 'Your job title'
+        department_section: 'Your department or section'
         employer: 'Your employer'
         work_address: 'Your workplace address'
         payroll_number: 'Your payroll number'
@@ -61,6 +62,7 @@ en:
         school_roll_number: 'E.g. 12345B'
     help_text:
       membership_application:
+        department_section: "Leave blank if you're not sure"
         email: 'A personal email is better'
         phone_number: 'Your mobile number is best'
         pay_rate: 'If the amount varies, use an average.'
@@ -82,6 +84,11 @@ en:
             We want to be able to communicate with you effectively, inside and outside of your workplace.
             The majority of our communication will be by email but there may be times when we need to call you,
             and a mobile number is best.
+        department_section:
+          link: '(why is it better to provide this?)'
+          content:
+            If we need to deal with an issue on your behalf, it helps us to help you
+            if we know exactly where within your organisation you work.
         payroll_number:
           link: '(why do we need this?)'
           content:
