API self-service: create a token
Redirect /admin/profile to a list of tokens. Allow a "create new" button
to create new tokens. Show the new token once only in flash.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,11 @@
 
 en:
   main_title: "Join Fórsa"
+
   activerecord:
+    authentication_tokens:
+      created: 'Token created. Copy this now as it is the last time you will be able to see it: %{token}'
+
     errors:
       models:
         membership_application:
