Make a date range search
Available from both HTML and JSON. Use a view model
View::DateRangeQuery to validate the parameters, and render errors
as JSON when necessary.

It's a bit hacky on the form side, using a combination of

form_with scope: nil and an `f.object = @date_range_query` to get
our field-with-errors implementation working.

Also we're shoehorning some help text for the search in with
membership_application in en.yml. It doesn't really belong there but
we don't have to refactor help_for and its template to get it.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,6 +74,9 @@ en:
         declaration: 'This must be "%{full_name}"'
         hours_per_week: 'Take the average over the last month.'
         school_roll_number: 'Five digits followed by a letter – found on your payslip'
+        # Shouldn't be here because isn't a membership application field but are for
+        # date search/not refactoring help_for convenience
+        date_search_field: 'e.g. 2020-04-19, 2020-04-19 23:59:59'
     help_dropdown:
       membership_application:
         email:
