Add post-join questions
Wire up the two following new flags:

MembershipApplication#completed
MembershipApplication#answered_post_join

They're there to signal when the wizard process has ended and we're
just updating the object. We could have made a post_join step instead,
I suppose, but I like /membership-application/completed better than
/membership-application/steps/completed, and also these flags are a bit
less murky than the current_step workflow.

Any of the above might be bobbins. I wouldn't know without trying the
"other" way.

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -63,3 +63,4 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  thanks_on_completion: "Thanks for letting us know."
