Refer to site_email and site_tel only via helper
Add them to the very top of en.yml. Change to correct email.
Delete an unused helper claiming the same thing.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@
 en:
   main_title: "Join Fórsa"
   site_email: 'applicationsinfo@forsa.ie'
+  site_tel: '01 817 1500'
 
   activerecord:
     authentication_tokens:
