First screen copy changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,8 +93,8 @@ en:
           link: '(why?)'
           content:
             We want to be able to communicate with you effectively, inside and outside of your workplace.
-            Some employers use filters to block union emails, or you might change jobs in the future,
-            so you may not receive our emails if you use your work email.
+            Some employers use filters to block union emails. Or you might change jobs in the future, so you may not
+            receive our emails if you use your work email.
         phone_number:
           link: '(why?)'
           content:
